--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-radio-buttons-group": "^1.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "tailwindcss": "^2.2.7",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
