--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.13.0",
     "react-js-pagination": "^3.0.3",
     "react-modal": "^3.14.3",
     "react-paginate": "^7.1.3",
