--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
-    "bootstrap": "^5.0.2",
+    "bootstrap": "^5.1.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.0-beta.6",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.13.0",
     "react-js-pagination": "^3.0.3",
@@ -18,6 +19,7 @@
     "react-radio-buttons-group": "^1.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "reactstrap": "^8.10.0",
     "tailwindcss": "^2.2.7",
     "web-vitals": "^1.0.1"
   },
